--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="text-align:center ;"></p> 
     <p>The term "girl group" also denotes the wave of American female pop singing groups who flourished in the late 1950s and early 1960s.
     </p>
-    <img src="img/a.jpg.png" width="800" height="500">
+    <img src="a.jpg.png" width="800" height="500">
     
     
     <hr style="width:200px" class="w3-opacity"> 
