--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="text-align:center ;"></p>
     <p>Over the past decades, girl groups have been an integral part of the music industry, exerting a profound influence on the musical landscape and creating timeless hits. Today, their presence has grown exponentially, with a staggering number of over six hundred girl groups thriving worldwide.
     </p>
-    <img src="img/image.jpg.png" width="800" height="500">
+    <img src="bennipoli1/image.jpg.png" width="800" height="500">
      
     <hr style="width:200px" class="w3-opacity"> 
     <p style="text-align:center ;"></p> 
